--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </script>
     <div class="container">
       <h1>&gt; Sacrifice:~#</h1>
-      <h1>&gt; 404 not Found</h1>
-      <h1>&gt; Please Back to Home or <a href="">CLICK HERE</a><br></h1>
+      <h1>&gt; 404 Adventure not Found</h1>
+      <h1>&gt; Please Back to Home or <a href="https://discord.io/Sacrifice">CLICK HERE</a><br></h1>
       <h1>&gt;<span class="blink_text"> _</span></h1>
       <hr><br>
       <!-- <img src="../../../img/logo.png" alt="logo"><br> -->
@@ -33,7 +33,7 @@
       <hr>
       <h1>
         // JOIN ? ? ?<br>
-        > discord  <a href="">CLICK HERE</a><br>
+        > discord  <a href="https://discord.gg/qr6ejJd">CLICK HERE</a><br>
 		<!-- > telegram <a href="https://t.me/yoshikkeh_bot">CLICK HERE</a><br>
         > facebook <a href="https://www.facebook.com/groups/190606768909296">CLICK HERE</a><br> -->
 		
@@ -41,7 +41,7 @@
       </h1>
       <h1>
         // EEERRRRRRRRRRRRRRRR<br>  
-        ... IP : 127.0.0.1  <br>
+        <!-- ... IP : 127.0.0.1  <br> -->
         ... BDO SEA    <br>  
         ... SuginaDevil   <br>  
         <hr>
@@ -51,7 +51,7 @@
       <h5>
         &gt; WHO ARE WE?
         <br>
-        &gt; 127.0.0.1
+        &gt; Adventure Tersesat
       </h5>
     </div>
     <audio autoplay="" loop="">
