--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head><meta charset="utf-8">
@@ -23,16 +22,23 @@
       }
     </script>
     <div class="container">
+      <img src="Sacrifice.png" alt="Paris">
       <h1>&gt; Sacrifice:~#</h1>
       <h1>&gt; 404 Adventure not Found</h1>
       <h1>&gt; Please Back to Home or <a href="https://discord.io/Sacrifice">CLICK HERE</a><br></h1>
       <h1>&gt;<span class="blink_text"> _</span></h1>
       <hr><br>
       <!-- <img src="../../../img/logo.png" alt="logo"><br> -->
-      <h3>// MAINTENACE</h3>
+      <h3>[Indonesia Guild]<br>
+        -Open Recruitment<br>
+        -Newbie / Veteran Come<br>
+        -Max Daily Pay [5M]<br>
+        -NO GS REQ -<br>
+        -Weekly Vell<br>
+        Luck +99% for join this guild!</h3>
       <hr>
       <h1>
-        // JOIN ? ? ?<br>
+        // FEEL FREE TO JOIN US ??<br>
         > discord  <a href="https://discord.gg/qr6ejJd">CLICK HERE</a><br>
 		<!-- > telegram <a href="https://t.me/yoshikkeh_bot">CLICK HERE</a><br>
         > facebook <a href="https://www.facebook.com/groups/190606768909296">CLICK HERE</a><br> -->
@@ -42,8 +48,11 @@
       <h1>
         // EEERRRRRRRRRRRRRRRR<br>  
         <!-- ... IP : 127.0.0.1  <br> -->
-        ... BDO SEA    <br>  
-        ... SuginaDevil   <br>  
+        ... PM FAMILY BELOW    <br>  
+        // Amaze // Veresta // ExNoire  <br> 
+        // Garasi // Rokaku // Bernkaztel  <br> 
+        // Bocit // DojimaNoRYU // SuginaDevil  <br> 
+
         <hr>
         ... EXTERNAL_INTERFERENCE LOGGED<p></p>
         <br>
